# pydantic-views

./: .gitignore  .readthedocs.yaml  Config.mk  Makefile  Python.mk  README.rst  Version.mk  pyproject.toml
.github/actions/setup-repo/: action.yaml
.github/actions/versioning/: action.yaml
.github/workflows/: common_get_version.yaml  common_make_release.yaml  common_push_version.yaml  manual-stabilize-release.yaml  manual_make_release.yaml  pull_request.yaml  push_code.yaml
docs/: Makefile
docs/source/: api.rst  conf.py  examples.rst  index.rst  type_checking.rst
examples/: check_errors.py  check_views.py  models.py  models.pyi  mypy.ini
examples/stubs/: models.pyi
src/pydantic_views/: __init__.py  annotations.py  builder.py  metaclass.py  mypy.py  stubgen.py  view.py
tests/: test_annotations.py  test_builder.py  test_metadata.py  test_mypy_plugin.py  test_mypy_plugin_branches.py  test_mypy_plugin_helpers.py  test_stubgen.py  test_view.py
tests/data/mypi/: check_errors.py  check_views.py  generate_stubs.py  models.py
