[project]
name = "pydantic-views"
version = "0.7.1"
description = "Views for Pydantic models"
authors = [
    {name = "Alfred",email = "alfred82santa@gmail.com"}
]
license = "MIT"
readme = "README.rst"
requires-python = ">=3.13,<4.0.0"
dependencies = ["pydantic (>=2.10.6,<3.0.0)"]
keywords = ["view", "pydantic", "datamodel", "dataclass", "model", "REST API", "mypy"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed"
]

[project.urls]
Homepage = "https://pydantic-views.readthedocs.io/stable/"
Repository = "https://github.com/alfred82santa/pydantic-views.git"
Documentation = "https://pydantic-views.readthedocs.io/stable/"
Issues = "https://github.com/alfred82santa/pydantic-views/issues"

[build-system]
requires = ["uv_build>=0.9.26,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
exclude = [".venv/*", "examples/stubs/*"]
line-length = 120

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.mypy]
files = ["src", "tests"]
exclude = [".venv/.*", "docs/source/.*"]
disable_error_code="valid-type,import-untyped"


[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.coverage.run]
omit = [".venv/*"]
branch = true
relative_files = false

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Dont complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",

    # Don't complain type checking imports, they aren't run:
    "if TYPE_CHECKING",

    # Don't complain overloads, they aren't run:
    "@overload"
]

[tool.coverage.paths]
source = ["src/"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.14",
]
docs = [
    "autodoc-pydantic>=2.2.0",
    "sphinx>=9.1.0",
]

[tool.poe.tasks]
build = "uv build"
test = "pytest -v -s --junitxml=pytest.xml --cov src --cov-report term-missing --cov-report xml:coverage.xml --cov-fail-under=85 --exitfirst"
typecheck = "mypy src"
format = "ruff format **/src/**/*.py **/tests/**/*.py **/examples/**/*.py"
"format:check" = "ruff format **/src/**/*.py **/tests/**/*.py **/examples/**/*.py --check"
lint = "ruff check **/src/**/*.py **/tests/**/*.py **/examples/**/*.py"
"lint:fix" = "ruff check **/src/**/*.py **/tests/**/*.py **/examples/**/*.py --fix"
stubgen = "python -m pydantic_views.stubgen"
"stubgen:examples" = "python -m pydantic_views.stubgen examples.models"

[tool.poe.tasks.clean]
cmd = """
rm -rf ./**/src/**/*.pyc
       ./**/src/**/*.pyo
       ./**/src/**/__pycache__
       ./**/tests/**/*.pyc
       ./**/tests/**/*.pyo
       ./**/tests/**/__pycache__
       ./**/examples/**/*.pyc
       ./**/examples/**/*.pyo
       ./**/examples/**/__pycache__
       .coverage
       coverage.xml
       pytest.xml
       .*_cache
"""
empty_glob = "null"

[tool.poe.tasks.validate]
help = "Execute all validations: typecheck, lint, and test"
sequence = ["typecheck", "format:check", "lint", "test"]

[tool.poe.tasks.prebuild]
help = "Pre-build checks: typecheck and lint"
sequence = ["typecheck", "lint"]

[tool.poe.tasks."clean:all"]
help = "Complete cleanup: cache, coverage, and temporary files"
sequence = ["clean", { cmd = """rm -rf dist
                      build
                      .coverage
                      coverage.xml
                      pytest.xml
                      **/.*_cache
            """ }]

[tool.poe.tasks.fix]
help = "Fix linting and formatting issues, then run tests"
sequence = ["format", "lint:fix"]

[tool.poe.tasks.docs]
help = "Build the documentation"
cmd = "sphinx-build -b html docs/source docs/build"
